[css3-text] Rendering -webkit-hanging value for text-indent from css3-text https://bugs.webkit.org/show_bug.cgi?id=114663

Patch by Jaehun Lim <ljaehun.lim@samsung.com> on 2013-04-17
Reviewed by Beth Dakin.

This patch is the rendering part to support hanging value for text-indent.
"hanging" means "Inverts which lines are affected."
It's prefixed and guarded by CSS3_TEXT flag.

Spec: http://dev.w3.org/csswg/css-text/#text-indent

Source/WebCore:

Test: fast/css3-text/css3-text-indent/text-indent-each-line-hanging.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::requiresIndent): Inverted the return value when "-webkit-hanging" is applied.

LayoutTests:

Renamed and updated the existing testcases.

* fast/css3-text/css3-text-indent/text-indent-each-line-hanging-expected.html: Renamed from LayoutTests/fast/css3-text/css3-text-indent/text-indent-each-line-expected.html
* fast/css3-text/css3-text-indent/text-indent-each-line-hanging.html: Renamed from LayoutTests/fast/css3-text/css3-text-indent/text-indent-each-line.html.

Canonical link: https://commits.webkit.org/133180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148658 268f45cc-cd09-0410-ab3c-d52691b4dbfc